--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <script src="Build/website-KF.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/website-KF.data.gz",
-        frameworkUrl: "Build/website-KF.framework.js.gz",
-        codeUrl: "Build/website-KF.wasm.gz",
+        dataUrl: "Build/website-KF.data",
+        frameworkUrl: "Build/website-KF.framework.js",
+        codeUrl: "Build/website-KF.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "kitchen_feud",
