--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   </head>
   <body style="text-align: center">
     <canvas id="unity-canvas" width=960 height=600 style="width: 960px; height: 600px; background: #231F20"></canvas>
-    <script src="Build/website-KF.loader.js"></script>
+    <script src="Build/ProBuild.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/website-KF.data",
-        frameworkUrl: "Build/website-KF.framework.js",
-        codeUrl: "Build/website-KF.wasm",
+        dataUrl: "Build/ProBuild.data",
+        frameworkUrl: "Build/ProBuild.framework.js",
+        codeUrl: "Build/ProBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "kitchen_feud",
